--- a/style.css
+++ b/style.css
@@ -2,6 +2,19 @@ body {
   font-family: 'Noto Sans', sans-serif;
   color: #3c4043;
 }
+
+main {
+  width: 75%;
+  margin: auto;
+  font-size: 14px;
+  line-height: 1.5;
+  padding-bottom: 30px;
+}
+
+h2 {
+  padding-top: 65px;
+}
+
 .color-blue {
   color: #3367d6;
   cursor: pointer
