--- a/style.css
+++ b/style.css
@@ -1,21 +1,114 @@
+/* RESET */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+/* REGOLE GENERALI */
 body {
   font-family: 'Noto Sans', sans-serif;
-  color: #3c4043;
+  color: #484d50;
 }
 
-main {
+.container {
   width: 75%;
   margin: auto;
+  line-height: 1.6;
   font-size: 14px;
-  line-height: 1.5;
-  padding-bottom: 30px;
+  padding-bottom: 40px;
 }
 
-h2 {
-  padding-top: 65px;
+ul {
+  list-style-type: none;
 }
 
 .color-blue {
   color: #3367d6;
   cursor: pointer
+}
+
+/* HEADER */
+nav {
+  padding: 20px;
+  height: 100px;
+  border-bottom: 1px solid rgba(61,61,61,.3);
+  color: #5f676c;
+}
+nav .logo {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  font-size: 22px;
+}
+nav .logo img {
+  height: 25px;
+  padding-right: 10px;
+}
+nav .logo span {
+  position: relative;
+  bottom: 3px;
+}
+
+nav .menu {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 17px;
+  font-weight: bold;
+}
+nav .menu .list-menu li{
+  display: inline-block;
+  margin-right: 30px;
+  font-size: 15px;
+  cursor: pointer;
+}
+nav .menu .list-menu li.active{
+  padding-bottom: 8px;
+  border-bottom: 3px solid #3367d6;
+  color: #3367d6;
+}
+
+nav .menu .contact img {
+  vertical-align: middle;
+  border-radius: 50%;
+  height: 25px;
+}
+nav .menu .contact span {
+  font-size: 13px;
+  margin-right: 10px;
+}
+
+/* MAIN */
+main h2 {
+  padding: 65px 0 25px;
+  font-size: 23px;
+}
+
+/* FOOTER */
+footer {
+  background-color: #f5f5f5;
+}
+
+footer .container {
+  height: 45px;
+  margin: 0 auto;
+  padding-bottom: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.info .info-list li {
+  display: inline-block;
+  font-size: 10px;
+  color: rgba(61,61,61,.6);
+  cursor: pointer;
+}
+.info .info-list li span {
+  padding: 0 5px;
+}
+
+.language i {
+  padding-right: 10px;
+  color: #3367d6;
 }
